--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ title: 靓仔的博客
 subtitle: 靓仔的博客
 description: 重庆理工大学 | 测控技术与仪器
 keywords: CQUT 博客 计算机 爱好
-author: 阿亮啊
+author: 阿亮
 language: zh-CN
 timezone:
 
